src/objects/ChangeManager__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BudgetHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Header</label>
        <referenceTo>BudgetHeader__c</referenceTo>
        <relationshipName>Change_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Project__r.pse__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContributingFactorDetails__c</fullName>
        <label>Contributing Factor Details</label>
        <picklist>
            <controllingField>ContributingFactor__c</controllingField>
            <picklistValues>
                <fullName>Lost or misplaced project documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccessible project file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No documentation or proof of agreed/approved change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project file poorly setup or not setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project file not used or not used correctly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM not following Project Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor negotiation skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM not accredited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not trained in proper use of PM tools/equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team responsibilities not clearly defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client&apos;s expectations not understood by team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project team not adequately briefed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client expectations not documented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor communciation with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Plan not distributed to team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnover issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical reviewers not trained/qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of client personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM inexperienced or unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inadequate oversight of PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key project team members or technical staff not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM personality conflict with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical review not completed or poorly executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical errors found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excesive editorial erors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calcultion check performed too late in project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable did not match project scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong person selected for technical reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client provided information not verified or not adequately verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inadequate budget forecasting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContributingFactor__c</fullName>
        <description>contributing factors/root causes the PM will select as reasons during change management (e.g., schedule overruns, margin loss, etc).</description>
        <label>Contributing Factor</label>
        <picklist>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Stakeholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope/Technical Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH&amp;E Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers/Subcontracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification and Checking</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExplainHandoverSignedCopies__c</fullName>
        <label>Handover: Signed Copies Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinanceApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeManagerFinApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HandoverActionsRaised__c</fullName>
        <description>8. Have all actions raised on the project been closed or in the process of being rectified?</description>
        <label>Handover: Actions Raised</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverBudgetUpdated__c</fullName>
        <description>7. Has the budget been updated?</description>
        <label>Handover: Budget Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverCommReporting__c</fullName>
        <inlineHelpText>12. Is communication and reporting process with the client healthy?</inlineHelpText>
        <label>Handover: Comm and Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverContractualDocuments__c</fullName>
        <description>1. Have all the contractual documents, including scope changes or variations been signed by the Project Approver or Project Manager and the client?</description>
        <label>Handover: Contractual Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverContractualObligations__c</fullName>
        <description>2. Have all of the contractual obligations been met?</description>
        <label>Handover: Contractual Obligations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverCriticalProjectPaperwork__c</fullName>
        <description>9. Is all critical project paperwork on file and clearly identified?</description>
        <label>Handover: Critical Project Paperwork</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverCurrentFinancialStatus__c</fullName>
        <label>Handover: Current Financial Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainActionsRaised__c</fullName>
        <label>Handover: Actions Raised Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainBudgetUpdated__c</fullName>
        <label>Handover: Budget Updated Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainCommReporting__c</fullName>
        <label>Handover: Comm and Reporting Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainContractObligations__c</fullName>
        <label>Handover: Contract Obligations Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainContractualDocuments__c</fullName>
        <label>Handover: Contractual Documents Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainKnownRisks__c</fullName>
        <label>Handover: Known Risks Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainMandatoryProjectApprovals__c</fullName>
        <label>Handover: Mandatory Project Appr Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainProjectApprovals__c</fullName>
        <label>Handover: Project Approvals Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainProjectPaperwork__c</fullName>
        <label>Handover: Critical Paperwork Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainProjectTeamInform__c</fullName>
        <label>Handover: Project Team Inform Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainRelevantProjectFiles__c</fullName>
        <label>Handover: Relevant Project Files Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverExplainSubsonProject__c</fullName>
        <label>Handover: Subs on Project Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverGoingWell__c</fullName>
        <label>Handover: Going Well</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverKnownRisks__c</fullName>
        <description>6. Have all known risks been identified?</description>
        <label>Handover: Known Risks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverMandatoryProjectApprovals__c</fullName>
        <description>4. Have the mandatory project approvals been achieved, such as any DOA matters, and relevant conditions of approval actioned?</description>
        <label>Handover: Mandatory Project Approvals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverNotGoingWell__c</fullName>
        <label>Handover: Not Going Well</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverOutcomes__c</fullName>
        <label>Handover: Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HandoverProjectTeamInform__c</fullName>
        <description>5. Have all project team members been informed of the handover?</description>
        <label>Handover: Project Team Inform</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverRelevantProjectFiles__c</fullName>
        <description>11. Has access to relevant project files (electronic and hardcopy) for project staff been confirmed?</description>
        <label>Handover: Relevant Project Files</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverSignedCopies__c</fullName>
        <description>10. Are signed copies of all deliverables on file, with transmittals and evidence of verification and approvals?</description>
        <label>Handover: Signed Copies</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HandoverSubsonProject__c</fullName>
        <description>3. Are there subs on the project?</description>
        <label>Handover: Subs on Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IncomingPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoming PM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ChangeManagerIncomingPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntExtBudgetComments__c</fullName>
        <label>Int/Ext: Budget Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtChangeManagementChanges__c</fullName>
        <formula>IMAGE(&apos;/resource/redTriangle&apos;,&apos;&apos;,15,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int/Ext: Change Management Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntExtChangeManagementComments__c</fullName>
        <label>Int/Ext: Change Management Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtChangeManagementNoChanges__c</fullName>
        <formula>IMAGE(&apos;/resource/greenStar&apos;,&apos;&apos;,15,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int/Ext: Change Management No Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntExtChangeManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Change Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtClassificationsComments__c</fullName>
        <label>Int/Ext: Classifications Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtClassifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Classifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtContractManagementComments__c</fullName>
        <label>Int/Ext: Contract Management Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtContractManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Contract Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtCustomersComments__c</fullName>
        <label>Int/Ext: Customers Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtCustomers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtDeliverablesComments__c</fullName>
        <label>Int/Ext: Deliverables Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtDeliverables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Deliverables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtDocumentManagementComments__c</fullName>
        <label>Int/Ext: Document Management Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtDocumentManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Document Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtKeyMembersComments__c</fullName>
        <label>Int/Ext: Key Members Tasks Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtKeyMembers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Key Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtProjectClosureComments__c</fullName>
        <label>Int/Ext: Project Closure Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtProjectClosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Project Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtProjectOnHoldComments__c</fullName>
        <label>Int/Ext: Project On Hold Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtProjectOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Project On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtProjectReviewComments__c</fullName>
        <label>Int/Ext: Project Review Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtProjectReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Project Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtProjectTasksComments__c</fullName>
        <label>Int/Ext: Project Tasks Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Project Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtResourcesComments__c</fullName>
        <label>Int/Ext: Resources Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtResources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtRiskManagementComments__c</fullName>
        <label>Int/Ext: Risk Management Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtRiskManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Risk Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtSafetyHealthEnvComments__c</fullName>
        <label>Int/Ext: Safety, Health &amp; Env Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtSafetyHealthEnv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Safety, Health &amp; Env</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtScheduleComments__c</fullName>
        <label>Int/Ext: Schedule Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtScopeChangeJustification__c</fullName>
        <label>Scope Change Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtScopeComments__c</fullName>
        <label>Int/Ext: Scope Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtScope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtSecurityComments__c</fullName>
        <label>Int/Ext: Security Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtSecurity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntExtStakeholdersCommComments__c</fullName>
        <label>Int/Ext: Stakeholders &amp; Comm Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntExtStakeholdersComm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int/Ext: Stakeholders &amp; Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <formula>IF(OR(ISPICKVAL(ApprovalStatus__c, &quot;Approved&quot;), ISPICKVAL(ApprovalStatus__c, &quot;Auto Approved&quot;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecutionApprovalChange__c</fullName>
        <formula>IF( RecordType.Name == &quot;Execution Approval&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Execution Approval Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalChange__c</fullName>
        <formula>IF( RecordType.Name == &quot;External Change&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is External Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternalChange__c</fullName>
        <formula>IF( RecordType.Name == &quot;Internal Change&quot; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Internal Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPMHandoverChange__c</fullName>
        <formula>IF( RecordType.Name == &quot;PM Handover&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PM Handover Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OracleApprovalSyncStatus__c</fullName>
        <label>Oracle Approval/Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutgoingPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outgoing PM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ChangeManagerOutgoingPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMComments__c</fullName>
        <label>PM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectAccountantApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Accountant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeManagerProjAccountantApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeManagerProjectApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLongName__c</fullName>
        <formula>Project__r.ProjectLongName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRequestOnHoldDate__c</fullName>
        <formula>Project__r.ScheduledOnHoldDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Requested On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectRequestRestartDate__c</fullName>
        <formula>Project__r.ScheduledRestartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Request Restart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectValue__c</fullName>
        <formula>Project__r.EstimatedContractValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Change Requests</relationshipLabel>
        <relationshipName>ChangeManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedProjectReviewCategory__c</fullName>
        <label>Requested Project Review Category</label>
        <picklist>
            <picklistValues>
                <fullName>C-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScheduledClosureDate__c</fullName>
        <formula>Project__r.ClosureDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedIdsForApproval__c</fullName>
        <label>SubmittedIdsForApproval</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Change</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0}</displayFormat>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <recordTypes>
        <fullName>ExecutionApproval</fullName>
        <active>true</active>
        <label>Execution Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExternalChange</fullName>
        <active>true</active>
        <description>External Changes are those which require client approval.  This would typically be changes which impact on Contract Value or other Contracted Terms.  Variations and Change Orders fall into the category of &quot;External Changes&quot;.</description>
        <label>External Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>InternalChange</fullName>
        <active>true</active>
        <description>Internal changes applies to changes which do not require client approval, this may include internal team resource changes. Updates to EACs are considered Internal Changes as they are updates to Forecast/EAC Budgets only and do n</description>
        <label>Internal Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMHandover</fullName>
        <active>true</active>
        <description>The PM Handover is used to document that status of a project when a new PM is assigned.  This change provides a checklist of items to cover as well as a snapshot of the project financials at the time of the change</description>
        <label>PM Handover</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement_Changes</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(IntExtContractManagement__c, OR( IsInternalChange__c,  IsExternalChange__c), 
OR(ISNULL(IntExtContractManagementComments__c),  ISBLANK(IntExtContractManagementComments__c))), true, false)</errorConditionFormula>
        <errorDisplayField>IntExtContractManagementComments__c</errorDisplayField>
        <errorMessage>Agreements and Funding Change Notes are Required</errorMessage>
    </validationRules>
</CustomObject>